<?xml version="1.0"?>
<package>
  <name>wheelchair_iaslab_description</name>
  <version>0.0.1</version>
  <description>The wheelchair_iaslab_description URDF package</description>

  <maintainer email="alberto.gottardi@studenti.unipd.it">Alberto Gottardi</maintainer>

  <author email="alberto.gottardi@studenti.unipd.it">Alberto Gottardi</author>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>

</package>
